Fix some silly code style prompts.